multi: add currency option to relevant RPC's
This commit adds a currency flag option to the node audit and fiat rpc
functions so that a user can opt for a currency other than USD.
