# frdrpc/rpcserver.go
@@ -438,7 +438,7 @@ func (s *RPCServer) ExchangeRate(ctx context.Context,
 		return nil, err
 	}
 
-	prices, err := fiat.GetPrices(ctx, timestamps, *granularity)
+	prices, err := fiat.GetPrices(ctx, timestamps, *granularity, req.Currency)
 	if err != nil {
 		return nil, err
 	}
